salesforce/omnishift-sf/force-app/main/default/objects/Omnishift_Signal__c/Omnishift_Signal__c.object-meta.xml
<CustomObject>
    <label>Omnishift Signal</label>
    <pluralLabel>Omnishift Signals</pluralLabel>
    <nameField>
        <label>Signal Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>An external event about a person - a business sale, a liquidity event, a role change. This is the shape a provider such as WealthFeed would populate. Nothing writes to it automatically yet.</description>
</CustomObject>