salesforce/omnishift-sf/force-app/main/default/objects/Omnishift_Signal__c/fields/Confidence__c.field-meta.xml
<CustomField>
    <fullName>Confidence__c</fullName>
    <label>Confidence</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
    <description>How sure the provider is. A weak match on a common name should not move a score as much as a filed public record.</description>
</CustomField>