salesforce/omnishift-sf/force-app/main/default/objects/Omnishift_Signal__c/fields/Detail__c.field-meta.xml
<CustomField>
    <fullName>Detail__c</fullName>
    <label>Detail</label>
    <type>LongTextArea</type>
    <length>2000</length>
</CustomField>