salesforce/omnishift-sf/force-app/main/default/objects/Omnishift_Signal__c/fields/Occurred_On__c.field-meta.xml
<CustomField>
    <fullName>Occurred_On__c</fullName>
    <label>Occurred On</label>
    <type>Date</type>
    <description>When the event happened, not when the provider reported it. Recency of the event is what carries the urgency.</description>
</CustomField>