salesforce/omnishift-sf/force-app/main/default/objects/Omnishift_Signal__c/fields/Omnishift_Contact__c.field-meta.xml
<CustomField>
    <fullName>Omnishift_Contact__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Omnishift_Signals</relationshipName>
    <relationshipLabel>Omnishift Signals</relationshipLabel>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>