salesforce/omnishift-sf/force-app/main/default/objects/Omnishift_Signal__c/fields/Signal_Type__c.field-meta.xml
<CustomField>
    <fullName>Signal_Type__c</fullName>
    <label>Signal Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Business sale</fullName><default>false</default><label>Business sale</label></value>
            <value><fullName>Liquidity event</fullName><default>false</default><label>Liquidity event</label></value>
            <value><fullName>Role change</fullName><default>false</default><label>Role change</label></value>
            <value><fullName>Property transaction</fullName><default>false</default><label>Property transaction</label></value>
            <value><fullName>Inheritance filing</fullName><default>false</default><label>Inheritance filing</label></value>
            <value><fullName>Retirement</fullName><default>false</default><label>Retirement</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>