salesforce/omnishift-sf/force-app/main/default/objects/Omnishift_Signal__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Text</type>
    <length>120</length>
</CustomField>